app/kontakte/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  replicas: 3
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8146"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels: {}
              topologyKey: kubernetes.io/hostname
      containers:
        - name: kontakte
          image: ghcr.io/teapotovh/kontakted:v0.0.0-20260926115214-347c3af6721b
          args:
            - --log-format=json
            - --ldap-url=ldap://bottin-server.storage:389
            - --ldap-root-dn=$(LDAP_BIND_DN)
            - --ldap-root-passwd=$(LDAP_BIND_PASSWORD)
            - --httpauth-jwt-secret=$(JWT_SECRET)
          ports:
            - name: http
              containerPort: 8145
            - name: observability
              containerPort: 8146
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /livez
              port: observability
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 6
            httpGet:
              path: /readyz
              port: observability
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
