app/kontakte/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: server
spec:
  internalTrafficPolicy: Local
  ports:
    - name: http
      protocol: TCP
      targetPort: http
      port: 8080
