app/kontakte/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - user.teapot.ovh
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: kontakte-server
        port: 8080
        weight: 1
      matches:
      - path:
          type: PathPrefix
          value: /
